--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     常に最新を進むYukiBBSのwiki<br>
     速報などにも対応<br>
     ※人力のため、タイムラグがあります。<br>
-    <h2>wikiページ一覧</h2>
+    <h2>wikiページ一覧</h2><br>
+    <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
   </boby>
 </html>
