--- a/commands.html
+++ b/commands.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>YukiBBS 最新情報</title>
+  <title>コマンド一覧 -New YukiBBS wiki</title>
   </head>
     <boby>
-      <h1>YukiBBS 最新情報</h1>
+      <h1>使用できるコマンド一覧</h1>
 /destroy Falseでスピーカーじゃない人をまとめて消せる<br>
 /destroy True False で全消し<br>
 /destroy blue（一般人）<br>
@@ -28,6 +28,9 @@
 /dissummit /dissummit id ：運営専用のコマンド。入力してサミット権限を剝奪できる。<br>
 /add ID 文字 運営、サミット専用のコマンド。IDの最後に文字を追加可能。<br>
 /max 数字 コメントの自動削除を行う数字を指定できる。<br>
+      <h1>削除されたコマンド一覧</h1>
+/registe 名前、ID、シードの長さが掲示板管理部に通達されるコマンド。マネージャー以上の権限配布に使われた。 廃止日…2023年3月29日<br>
+/clean ランダムに権限持ちを剥奪するコマンド。使用されていないアカウントを削除するために使われた 廃止日…2023年3月29日<br>
       <h2>メニュー</h2>
    <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
   </boby>
