--- a/user.html
+++ b/user.html
@@ -11,5 +11,7 @@
     <font color="red">マネージャー</font>（IDが赤文字で表示）2023年3月31日の人数…65人<br>
     <font color="darkorange">スピーカー</font>（IDがオレンジで表示　NGワードの制限緩和）2023年3月31日の人数…89人<br>
     <font color="blue"通常ユーザー</font>（IDが青色で表示　NGワードの規制、絵文字や特殊文字の使用できない、3行以上のメッセージ規制、独自アルゴリズムを使用した荒らしの検知）<br>
+    <h2>メニュー</h2>
+   <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
   </body>
 </html>
