--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     ※人力のため、タイムラグがあります。<br>
     <h2>wikiページ一覧</h2><br>
     <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
+    <a href="https://amagami-youtube.github.io/user.html"><font color="#008080">権限一覧</font></a><br>
   </boby>
 </html>
