--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <h2>wikiページ一覧</h2><br>
     <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
     <a href="https://amagami-youtube.github.io/user.html"><font color="#008080">権限一覧</font></a><br>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
   </boby>
 </html>
