--- a/new.html
+++ b/new.html
@@ -2,5 +2,10 @@
 <html>
 <head>
 <title>新要素 -New YukiBBS wiki</title>
+  <h1>新要素一覧</h1>
+2023年3月31日更新<br>
+ダークモードの追加<br>
+  ダークモードを使用すると、運営、マネージャーが水色、サミットがピンク、スピーカーが青、青IDが赤色になる。<br>
+  権限の見間違いに注意、白色っぽい色は背景に同化するため注意<br>
 </head>
 </html>
