--- a/new.html
+++ b/new.html
@@ -7,5 +7,7 @@
 ダークモードの追加<br>
   ダークモードを使用すると、運営、マネージャーが水色、サミットがピンク、スピーカーが青、青IDが赤色になる。<br>
   権限の見間違いに注意、白色っぽい色は背景に同化するため注意<br>
+<h2>メニュー</h2>
+   <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
 </head>
 </html>
