--- a/new.html
+++ b/new.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 <title>新要素 -New YukiBBS wiki</title>
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+  </head>
+  <body>
   <h1>新要素一覧</h1>
 2023年3月31日更新<br>
 ダークモードの追加<br>
@@ -9,5 +18,5 @@
   権限の見間違いに注意、白色っぽい色は背景に同化するため注意<br>
 <h2>メニュー</h2>
    <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
-</head>
+</body>
 </html>
