--- a/commands.html
+++ b/commands.html
@@ -10,7 +10,7 @@
   window.addEventListener('load', addDarkmodeWidget);
 </script>
   </head>
-    <boby>
+    <body>
       <h1>使用できるコマンド一覧</h1>
 /destroy Falseでスピーカーじゃない人をまとめて消せる<br>
 /destroy True False で全消し<br>
@@ -40,5 +40,5 @@
 /clean ランダムに権限持ちを剥奪するコマンド。使用されていないアカウントを削除するために使われた 廃止日…2023年3月29日<br>
       <h2>メニュー</h2>
    <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
-  </boby>
+  </body>
 </html>
