--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>New YukiBBS wiki</title>
-  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
 <script>
   function addDarkmodeWidget() {
-    new Darkmode().showWidget();
+    new Darkmode({label: '🌓'}).showWidget();
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
   </head>
-  <boby>
+  <body>
     <h1><font color="red">New YukiBBS wiki</font></h1>
     常に最新を進むYukiBBSのwiki<br>
     速報などにも対応<br>
@@ -19,5 +19,5 @@
     <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
     <a href="https://amagami-youtube.github.io/user.html"><font color="#008080">権限一覧</font></a><br>
     <a href="https://amagami-youtube.github.io/new.html"><font color="#008080">新要素一覧</font></a><br>
-  </boby>
+  </body>
 </html>
