--- a/new.html
+++ b/new.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>新要素 -New YukiBBS wiki</title>
-  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
 <script>
   function addDarkmodeWidget() {
-    new Darkmode().showWidget();
+    new Darkmode({label: '🌓'}).showWidget();
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
