--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>New YukiBBS wiki</title>
- <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
 <script>
   function addDarkmodeWidget() {
-    new Darkmode({label: '🌓'}).showWidget();
+    new Darkmode().showWidget();
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
