--- a/commands.html
+++ b/commands.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
 <script>
   function addDarkmodeWidget() {
-    new Darkmode({label: '🌓'}).showWidget();
+    new Darkmode().showWidget();
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
