--- a/new.html
+++ b/new.html
@@ -5,17 +5,19 @@
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
 <script>
   function addDarkmodeWidget() {
-    new Darkmode({label: '🌓'}).showWidget();
+    new Darkmode().showWidget();
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
   </head>
   <body>
-  <h1>新要素一覧</h1>
-2023年3月31日更新<br>
-ダークモードの追加<br>
+  <h1>新要素一覧</h1><br>
+             2023年3月31日更新<br>
+             <h2>ダークモードの追加</h2><br>
   ダークモードを使用すると、運営、マネージャーが水色、サミットがピンク、スピーカーが青、青IDが赤色になる。<br>
   権限の見間違いに注意、白色っぽい色は背景に同化するため注意<br>
+             <h2>自動役職追加</h2>
+  マネージャーの権限を持っていて、スピーカーの権限を持っていない場合は自動にスピーカーが<br>追加されるもの。サミットでも適用する。<br>
 <h2>メニュー</h2>
    <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
 </body>
