--- a/commands.html
+++ b/commands.html
@@ -2,6 +2,13 @@
 <html>
   <head>
   <title>コマンド一覧 -New YukiBBS wiki</title>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js%22%3E</script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
   </head>
     <body>
       <h1>使用できるコマンド一覧</h1>
