--- a/new.html
+++ b/new.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <title>新要素 -New YukiBBS wiki</title>
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
   </head>
   <body>
   <h1>新要素一覧</h1><br>
