Update and rename summit to summit.html

--- a/summit.html
+++ b/summit.html
@@ -20,6 +20,8 @@
 <li>2,サミットになったからといってサブ垢を大量生産しない</li>
 <li>3,<font color="red">運営を怒らせない ※最重要</font></li>
 <br>
-<h2>以上のルールを守らない場合、剥奪やIPを晒す場合があります。</h2>
+<h2>以上のルールを守らない場合、剥奪やIPを晒す場合があります。</h2><br>
+  <h2>メニュー</h2>
+   <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
 </body>
 </html>
