--- a/new.html
+++ b/new.html
@@ -12,7 +12,9 @@
   </head>
   <body>
   <h1>新要素一覧</h1><br>
-             2023年3月31日更新<br>
+             2023年4月21日更新<br>
+    <h2>/callコマンドの追加</h2><br>
+    /callコマンドを使うと、Discordを通じて運営にメンションを送ることができる。<br>
              <h2>ダークモードの追加</h2><br>
   ダークモードを使用すると、運営、マネージャーが水色、サミットがピンク、スピーカーが青、青IDが赤色になる。<br>
   権限の見間違いに注意、白色っぽい色は背景に同化するため注意<br>
