--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
     <a href="https://amagami-youtube.github.io/user.html"><font color="#008080">権限一覧</font></a><br>
     <a href="https://amagami-youtube.github.io/new.html"><font color="#008080">新要素一覧</font></a><br>
+        <a href="https://amagami-youtube.github.io/summit.html"><font color="#008080">サミット体験会について</font></a><br>
   </body>
 </html>
