--- a/summit.html
+++ b/summit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>サミット体験会のルール -New YukiBBS wiki
+  <title>サミット体験会のルール -New YukiBBS wiki</title>
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
   function addDarkmodeWidget() {
