--- a/commands.html
+++ b/commands.html
@@ -12,6 +12,7 @@
   </head>
     <body>
       <h1>使用できるコマンド一覧</h1>
+/call で運営にメンションを送れる<br>
 /destroy Falseでスピーカーじゃない人をまとめて消せる<br>
 /destroy True False で全消し<br>
 /destroy blue（一般人）<br>
