--- a/instance.html
+++ b/instance.html
@@ -13,7 +13,7 @@
 </head>
   <body>
     <h1>インスタンスページ</h1>
-    公開していいインスタンスを貼っていきます。（無許可転載OK）<br>随時更新しています。
+    公開していいインスタンスを貼っていきます。（無許可転載OK）<br>随時更新しています。<br>無断転載してくれたほうが作者的に嬉しいです。<br>
      <table border="1">
     <tr>
       <th>インスタンス公開日</th>
@@ -54,7 +54,9 @@
     <tr>
       <td>2023年5月08日</td>
       <td><a href="https://ipad-ifilter.onrender.com">ipad-ifilter.onrender.com</a></td>
-  </tr>
+         </tr>
     </table>
+          <h2>メニュー</h2>
+   <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
   </body>
 </html>
