--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     速報などにも対応<br>
     ※人力のため、タイムラグがあります。<br>
     <h2>wikiページ一覧</h2><br>
-    <a href="https://amagami-youtube.github.io/commands.html"><font color="#008080">コマンド一覧</font></a><br>
-    <a href="https://amagami-youtube.github.io/user.html"><font color="#008080">権限一覧</font></a><br>
-    <a href="https://amagami-youtube.github.io/new.html"><font color="#008080">新要素一覧</font></a><br>
-        <a href="https://amagami-youtube.github.io/summit.html"><font color="#008080">サミット体験会について</font></a><br>
-            <a href="https://amagami-youtube.github.io/instance.html"><font color="#008080">インスタンス一覧</font></a><br>
+    <a href="https://amagami-youtube.github.io/p/command/index.html"><font color="#008080">コマンド一覧</font></a><br>
+    <a href="https://amagami-youtube.github.io/p/user/index.html"><font color="#008080">権限一覧</font></a><br>
+    <a href="https://amagami-youtube.github.io/p/new/index.html"><font color="#008080">新要素一覧</font></a><br>
+        <a href="https://amagami-youtube.github.io/p/summit/index.html"><font color="#008080">サミット体験会について</font></a><br>
+            <a href="https://amagami-youtube.github.io/p/instance/index.html"><font color="#008080">インスタンス一覧</font></a><br>
   </body>
 </html>
