--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     速報などにも対応<br>
     ※人力のため、タイムラグがあります。<br>
     <h2>wikiページ一覧</h2><br>
-    <a href="https://amagami-youtube.github.io/p/command/"><font color="#008080">コマンド一覧</font></a><br>
-    <a href="https://amagami-youtube.github.io/p/user/"><font color="#008080">権限一覧</font></a><br>
-    <a href="https://amagami-youtube.github.io/p/new/"><font color="#008080">新要素一覧</font></a><br>
-        <a href="https://amagami-youtube.github.io/p/summit/"><font color="#008080">サミット体験会について</font></a><br>
-            <a href="https://amagami-youtube.github.io/p/instance/"><font color="#008080">インスタンス一覧</font></a><br>
+<a href="/p/"><font color="#008080">ページ一覧</font></a><br>
+    <a href="/p/command/"><font color="#008080">コマンド一覧</font></a><br>
+    <a href="/p/user/"><font color="#008080">権限一覧</font></a><br>
+    <a href="/p/new/"><font color="#008080">新要素一覧</font></a><br>
+        <a href="/p/summit/"><font color="#008080">サミット体験会について</font></a><br>
+            <a href="/p/instance/"><font color="#008080">インスタンス一覧</font></a><br>
   </body>
 </html>
