--- a/p/index.html
+++ b/p/index.html
@@ -14,28 +14,28 @@
     <h1>ページ一覧</h1>
     <hr>
     <h3>コマンド一覧</h3>
-    <p>使用できるコマンド一覧 /call で運営にメンションを送れる <br>/destroy Falseでスピーカーじゃない人をまとめて消せる <br>/destroy True False で全消し /destroy blue</p><br>
+    <p>使用できるコマンド一覧 /call で運営にメンションを送れる <br>/destroy Falseでスピーカーじゃない人をまとめて消せる <br>/destroy True False で全消し /destroy blue…</p><br>
     <p>最終更新日…2023年4月</p><br>
     <a href="/p/command/"><font color="#008080">コマンド一覧</font></a>
     <hr>
     <h3>権限一覧</h3>
-    <p>権限一覧 創立者…yukiさん 運営（名前が赤文字で表示）…yukiさん、優花さん、Rurunさん、hyaさん、天神 <br>※暗澹=優花=詩織=Xcpyl-20=1051、<br>冬樹とは呼んではならない サミット（IDが</p><br>
+    <p>権限一覧 創立者…yukiさん 運営（名前が赤文字で表示）…yukiさん、優花さん、Rurunさん、hyaさん、天神 <br>※暗澹=優花=詩織=Xcpyl-20=1051、<br>冬樹とは呼んではならない サミット（IDが…</p><br>
     <p>最終更新日…2023年4月</p>
     <a href="/p/user/"><font color="#008080">権限一覧</font></a><br>
     <hr>
     <h3>新要素一覧</h3>
-    <p>新要素一覧 2023年4月21日更新 /callコマンドの追加 <br>/callコマンドを使うと、Discordを通じて運営にメンションを送ることができる。 <br>ダークモードの追加 ダークモードを使用すると、運営、マネー</p><br>
+    <p>新要素一覧 2023年4月21日更新 /callコマンドの追加 <br>/callコマンドを使うと、Discordを通じて運営にメンションを送ることができる。 <br>ダークモードの追加 ダークモードを使用すると、運営、マネー…</p><br>
     <p>最終更新日…2023年4月21日</p>
     <a href="/p/new/"><font color="#008080">新要素一覧</font></a><br>
     <hr>
     <h3>サミット体験会について</h3>
-    <p>サミット体験会のルール サミット体験会とは？ <br>サミット体験会とは、若手のサミットを育成するために作られた体験会のことである。 <br>ルール 1,サミット体験会中のadd表示の変更無し 2,サミットになったからといって</p><br>
+    <p>サミット体験会のルール サミット体験会とは？ <br>サミット体験会とは、若手のサミットを育成するために作られた体験会のことである。 <br>ルール 1,サミット体験会中のadd表示の変更無し 2,サミットになったからといって…</p><br>
     <p>最終更新日…2023年4月</p>
     <a href="/p/summit/"><font color="#008080">サミット体験会について</font></a><br>
     <hr>
     <h3>インスタンス一覧</h3>
-    <p>インスタンスページ <br>公開していいインスタンスを貼っていきます。（無許可転載OK）随時更新しています。<br>無断転載してくれたほうが作者的に嬉しいです。</p><br>
-    <p>最終更新日…2023年4月</p>
+    <p>インスタンスページ <br>公開していいインスタンスを貼っていきます。（無許可転載OK）随時更新しています。<br>無断転載してくれたほうが作者的に嬉しいです。…</p><br>
+    <p>最終更新日…2023年5月27日</p>
     <a href="/p/instance/"><font color="#008080">インスタンス一覧</font></a><br>
   </body>
 </html>
