--- a/p/command/index.html
+++ b/p/command/index.html
@@ -12,7 +12,7 @@
   </head>
     <body>
       <h1>使用できるコマンド一覧</h1>
-/disself このコマンドを打ったアカウントの権限をすべて剥奪し、青IDにする
+/disself このコマンドを打ったアカウントの権限をすべて剥奪し、青IDにする<br>
 /call で運営にメンションを送れる<br>
 /destroy Falseでスピーカーじゃない人をまとめて消せる<br>
 /destroy True False で全消し<br>
