--- a/p/instance/index.html
+++ b/p/instance/index.html
@@ -14,18 +14,9 @@
   <body>
     <h1>インスタンスページ</h1>
     公開していいインスタンスを貼っていきます。（無許可転載OK）<br>随時更新しています。<br>無断転載してくれたほうが作者的に嬉しいです。<br>
-      <font color="red">Renderの一か月の期限を終了したため、URLが変わっています<br>よこしゅうさんなどの掲示板運営以外のインスタンスを使用することはおすすめしません。シードとIP（大まかな住所を特定可能な数値）を盗まれ、悪用される可能性があります。</font>
+      <font color="red">Renderの一か月の期限を終了したため、URLが変わっています<br>よこしゅうさんなどの掲示板運営以外のインスタンスを使用することはおすすめしません。シードとIP（大まかな住所を特定可能な数値）を盗まれ、悪用される可能性があります。</font><br><font color="gold">インスタンスが一部復活しました！！！</font>
       <hr>
-     <table border="1">
-    <tr>
-      <th>インスタンス公開日</th>
-      <th>インスタンスURL</th>
-    </tr>
-    <tr>
-      <td>2023年5月27日</td>
-      <td><a href="https://sugar-conan.onrender.com">sugar-conan.onrender.com</a></td>
-    </tr>
-    </table>
+https://kamyuhahuri-sozai-rx71.onrender.com <br> https://manon-lvmw-8h3q.onrender.com <br> https://marnon-oysf.onrender.com <br> https://uzuramame-ayn5.onrender.com <br> https://kusadango-pdjb.onrender.com <br> https://moyashi-c53m.onrender.com <br> https://yukiyuchiyubu-ekx0.onrender.com <br> https://ama0507-mintia-yuki-1-cjeq.onrender.com <br> https://sugar-conan.onrender.com <br>
       <hr>
           <h2>メニュー</h2>
    <a href="https://amagami-youtube.github.io"><font color="#008080">Home</font></a>
