--- a/p/user/index.html
+++ b/p/user/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>権限一覧</h1>
     <font color="gold">創立者…yukiさん</font><br>
-    <font color="red">運営（名前が赤文字で表示）…yukiさん、優花さん、Rurunさん、hyaさん、天神</font><br>
+    <font color="red">運営（名前が赤文字で表示）…yukiさん、優花さん、Rurunさん、hyaさん、天神 / らぬ✅👑、Splatoonが大好きな人！、烏丸、ライ</font><br>
     <font color="red">※暗澹=優花=詩織=Xcpyl-20=1051、冬樹とは呼んではならない</font><br>
     <font color="teal">サミット</font>（IDが暗いシアンになる。この掲示板を管理する団体の代表者。運営とほぼ同じコマンドが使える）2023年3月31日の人数…49人<br>
     <font color="red">マネージャー</font>（IDが赤文字で表示）2023年3月31日の人数…65人<br>
